--- a/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
+++ b/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
@@ -83,6 +83,10 @@
                             </li>
                             <li class="divider"></li>
                             <li>
+                                <a href="mailto:soporte@nube.la">Soporte</a>
+                            </li>
+                            <li class="divider"></li>
+                            <li>
                                 <a href="@Url.Action("Logout")" ui-sref="access.signin">Cerrar sesión</a>
                             </li>
                         </ul>
