--- a/NubeBooks/Views/Admin/ComprobantesAnulados.cshtml
+++ b/NubeBooks/Views/Admin/ComprobantesAnulados.cshtml
@@ -102,13 +102,13 @@
 }" class="table table-striped b-t b-b dataTable">
                 <thead>
                     <tr>
-                        <th class="text-center" style="width:10%">Fecha</th>
-                        <th class="text-center" style="width:10%">Documento</th>
-                        <th class="text-center" style="width:15%">Número</th>
-                        <th class="text-center" style="width:25%">Cliente</th>
-                        <th class="text-center" style="width:15%">Monto</th>
-                        <th class="text-center" style="width:7%">Estado</th>
-                        <th class="text-right" style="width:8%">Opc.</th>
+                        <th style="width:10%">Fecha</th>
+                        <th style="width:10%">Documento</th>
+                        <th style="width:10%">Número</th>
+                        <th style="width:35%">Cliente</th>
+                        <th class="text-center" style="width:10%">Monto</th>
+                        <th class="text-center" style="width:5%">Estado</th>
+                        <th class="text-center" style="width:10%">Opc.</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -117,10 +117,10 @@
                         foreach (var item in Model)
                         {
                             <tr>
-                                <td class="text-left">@item.FechaEmision.ToString("yyyy/MM/dd", CultureInfo.CreateSpecificCulture("es-PE"))</td>
-                                <td class="text-left">@item.NombreTipoDocumento</td>
-                                <td class="text-left">@item.NroDocumento</td>
-                                <td class="text-left">@item.NombreEntidad</td>
+                                <td>@item.FechaEmision.ToString("yyyy/MM/dd", CultureInfo.CreateSpecificCulture("es-PE"))</td>
+                                <td>@item.NombreTipoDocumento</td>
+                                <td>@item.NroDocumento</td>
+                                <td>@item.NombreEntidad</td>
                                 <td class="text-right">@item.SimboloMoneda @item.Monto.ToString("N2", CultureInfo.InvariantCulture)</td>
                                 <td class="text-center" style=@(item.Ejecutado ? "color:#8EC100;" : "color:red;")>@(item.Ejecutado ? "R" : "P" )</td>
                                 @{ var rIcon = ViewBag.EsUsuarioExterno ? "search" : "eye"; var rTitle = ViewBag.EsUsuarioExterno ? "Visualizar" : "Detalle"; }
