--- a/NubeBooks/Views/Admin/EntidadesClientes.cshtml
+++ b/NubeBooks/Views/Admin/EntidadesClientes.cshtml
@@ -53,7 +53,7 @@
                         <th class="text-center" style="width:25%">Nombre</th>
                         <th class="text-center" style="width:25%">Tipo Documento</th>
                         <th class="text-center" style="width:25%">Estado</th>
-                        <th class="text-center" style="width:25%">Opc.</th>
+                        <th style="width:8%"></th>
                     </tr>
                 </thead>
                 <tbody>
