--- a/NubeBooks/Views/Admin/EntidadesProveedores.cshtml
+++ b/NubeBooks/Views/Admin/EntidadesProveedores.cshtml
@@ -55,7 +55,7 @@
                         <th class="text-center">Detracción</th>
                         <th class="text-center">Bien o Servicio</th>
                         <th class="text-center" style="width:10%">Estado</th>
-                        <th class="text-center" style="width:10%">Opc.</th>
+                        <th style="width:8%"></th>
                     </tr>
                 </thead>
                 <tbody>
