--- a/NubeBooks/Views/Admin/Honorarios.cshtml
+++ b/NubeBooks/Views/Admin/Honorarios.cshtml
@@ -39,7 +39,7 @@
                     <tr>
                         <th>Nombre</th>
                         <th class="text-center" style="width:10%">Estado</th>
-                        <th class="text-center" style="width:20%">Opc.</th>
+                        <th style="width:8%"></th>
                     </tr>
                 </thead>
                 <tbody>
