--- a/NubeBooks/Views/Admin/Items.cshtml
+++ b/NubeBooks/Views/Admin/Items.cshtml
@@ -45,7 +45,7 @@
                         <th class="text-center">Descripción</th>
                         <th class="text-center">U. Medida</th>
                         <th class="text-center">Estado</th>
-                        <th class="text-center" style="width:7%">Opc.</th>
+                        <th style="width:8%"></th>
                     </tr>
                 </thead>
                 <tbody>
