--- a/NubeBooks/Views/Admin/LibrosAdministrativos.cshtml
+++ b/NubeBooks/Views/Admin/LibrosAdministrativos.cshtml
@@ -62,7 +62,7 @@
                         <th class="text-center" style="width:25%">Fecha</th>
                         <th class="text-center">Saldo Total</th>
                         <th class="text-center" style="width:10%">Estado</th>
-                        <th class="text-center" style="width:10%">Opc.</th>
+                        <th style="width:8%"></th>
                     </tr>
                 </thead>
                 <tbody>
