--- a/NubeBooks/Views/Admin/CategoriaItms.cshtml
+++ b/NubeBooks/Views/Admin/CategoriaItms.cshtml
@@ -41,7 +41,7 @@
                     <tr>
                         <th class="text-center">Nombre</th>
                         <th class="text-center">Estado</th>
-                        <th class="text-center" style="width:7%">Opc.</th>
+                        <th style="width:8%"></th>
                     </tr>
                 </thead>
                 <tbody>
