--- a/NubeBooks/Views/Admin/ComprobantesAnulados.cshtml
+++ b/NubeBooks/Views/Admin/ComprobantesAnulados.cshtml
@@ -108,7 +108,7 @@
                         <th style="width:35%">Cliente</th>
                         <th class="text-center" style="width:10%">Monto</th>
                         <th class="text-center" style="width:5%">Estado</th>
-                        <th class="text-center" style="width:10%">Opc.</th>
+                        <th style="width:8%"></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -124,7 +124,7 @@
                                 <td class="text-right">@item.SimboloMoneda @item.Monto.ToString("N2", CultureInfo.InvariantCulture)</td>
                                 <td class="text-center" style=@(item.Ejecutado ? "color:#8EC100;" : "color:red;")>@(item.Ejecutado ? "R" : "P" )</td>
                                 @{ var rIcon = ViewBag.EsUsuarioExterno ? "search" : "eye"; var rTitle = ViewBag.EsUsuarioExterno ? "Visualizar" : "Detalle"; }
-                                <td class="text-right">
+                                <td class="text-center">
                                     <a href="@Url.Action("Comprobante", "Admin", new { id = item.IdComprobante })"><i class="fa fa-@rIcon" title="@rTitle"></i>&nbsp;&nbsp;</a>
                                     @if (!ViewBag.EsUsuarioExterno)
                                     {
