--- a/NubeBooks/Views/Admin/Entidad.cshtml
+++ b/NubeBooks/Views/Admin/Entidad.cshtml
@@ -182,7 +182,7 @@ else { cadena = "Actualizar"; }
                             <th class="text-center">Teléfono</th>
                             <th class="text-center">Celular</th>
                             <th class="text-center">Estado</th>
-                            <th class="text-center" width="10%">Opc.</th>
+                            <th style="width:7%"></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -201,7 +201,7 @@ else { cadena = "Actualizar"; }
                                     <td class="text-center" style="color:@(eColor)">@(obj.Estado ? "Activo" : "Inactivo" )</td>
                                     @if (ViewBag.EsAdmin || ViewBag.EsUsuarioInterno)
                                     {
-                                        <td class="text-center" width="10%"><a href="@Url.Action("Contacto", new { id = obj.IdContacto, idEntidad = Model.IdEntidadResponsable })"><i class="fa fa-pencil" title="Editar"></i></a></td>
+                                        <td class="text-right" width="10%"><a href="@Url.Action("Contacto", new { id = obj.IdContacto, idEntidad = Model.IdEntidadResponsable })"><i class="fa fa-pencil" title="Editar"></i></a></td>
                                     }
                                 </tr>
                             }
@@ -247,7 +247,7 @@ else { cadena = "Actualizar"; }
                                     <th width="20%">Nombre</th>
                                     <th class="text-center">Descripción</th>
                                     <th class="text-center">Estado</th>
-                                    <th class="text-center" width="10%">Opc.</th>
+                                    <th style="width:8%"></th>
                                 </tr>
                             </thead>
                             <tbody>
