--- a/NubeBooks/Views/Admin/LibrosBancarios.cshtml
+++ b/NubeBooks/Views/Admin/LibrosBancarios.cshtml
@@ -66,7 +66,7 @@
                         <th class="text-center">Saldo Disponible</th>
                         <th class="text-center">Saldo Bancario</th>
                         <th class="text-center" style="width:10%">Estado</th>
-                        <th class="text-center" style="width:10%">Opc.</th>
+                        <th style="width:8%"></th>
                     </tr>
                 </thead>
                 <tbody>
