--- a/NubeBooks/Views/Admin/Periodos.cshtml
+++ b/NubeBooks/Views/Admin/Periodos.cshtml
@@ -42,7 +42,7 @@
                         <th class="text-center">Fecha Inicio</th>
                         <th class="text-center">Fecha Fin</th>
                         <th class="text-center">Estado</th>
-                        <th class="text-center" style="width:10%">Opc.</th>
+                        <th style="width:8%"></th>
                     </tr>
                 </thead>
                 <tbody>
