--- a/NubeBooks/Views/Admin/Usuarios.cshtml
+++ b/NubeBooks/Views/Admin/Usuarios.cshtml
@@ -41,7 +41,7 @@
                         <th class="text-center">Tipo de Usuario</th>
                         <th class="text-center">Cuenta</th>
                         <th class="text-center">Estado</th>
-                        <th class="text-center" style="width:10%">Opc.</th>
+                        <th style="width:8%"></th>
                     </tr>
                 </thead>
                 <tbody>
