--- a/NubeBooks/Views/Admin/ReportesGestion.cshtml
+++ b/NubeBooks/Views/Admin/ReportesGestion.cshtml
@@ -148,7 +148,7 @@
             <div class="form-group">
                 <div class="row">
                     <div class="col-md-4">
-                        <label class="col-md-6 text-center">Gestión Mensual</label>
+                        <label class="col-md-6 text-center">Facturación Mensual</label>
                         <div class="col-md-6 text-center">
                             <a class="btn btn-sm btn-success reporte" data-idreporte="12">Generar Reporte</a>
                         </div>
