--- a/NubeBooks/Views/Admin/ComprobantesAnulados.cshtml
+++ b/NubeBooks/Views/Admin/ComprobantesAnulados.cshtml
@@ -107,7 +107,7 @@
                         <th style="width:10%">Número</th>
                         <th style="width:35%">Cliente</th>
                         <th class="text-center" style="width:10%">Monto</th>
-                        <th class="text-center" style="width:5%">Estado</th>
+                        @*<th class="text-center" style="width:5%">Estado</th>*@
                         <th style="width:8%"></th>
                     </tr>
                 </thead>
@@ -122,7 +122,7 @@
                                 <td>@item.NroDocumento</td>
                                 <td>@item.NombreEntidad</td>
                                 <td class="text-right">@item.SimboloMoneda @item.Monto.ToString("N2", CultureInfo.InvariantCulture)</td>
-                                <td class="text-center" style=@(item.Ejecutado ? "color:#8EC100;" : "color:red;")>@(item.Ejecutado ? "R" : "P" )</td>
+                                @*<td class="text-center" style=@(item.Ejecutado ? "color:#8EC100;" : "color:red;")>@(item.Ejecutado ? "R" : "P" )</td>*@
                                 @{ var rIcon = ViewBag.EsUsuarioExterno ? "search" : "eye"; var rTitle = ViewBag.EsUsuarioExterno ? "Visualizar" : "Detalle"; }
                                 <td class="text-center">
                                     <a href="@Url.Action("Comprobante", "Admin", new { id = item.IdComprobante })"><i class="fa fa-@rIcon" title="@rTitle"></i>&nbsp;&nbsp;</a>
