--- a/NubeBooks/Views/Admin/Index.cshtml
+++ b/NubeBooks/Views/Admin/Index.cshtml
@@ -16,7 +16,13 @@
             PintarPieIngresos();
             PintarPieEgresos();
             //ObtenerTipoCambio();
+            $('#pie_consolidado').click(function(){ Moneda_Consolidado($(this)); });
         });
+
+        function Moneda_Consolidado(item)
+        {
+            $(item).toggleClass('bg-success bg-warning');
+        }
 
         function PintarGraficaLiquidez() {
             var listSoles = @Html.Raw(Json.Encode(ViewBag.lstLiquidezSoles));
@@ -321,10 +327,10 @@
                                     <div ng-init="d3_3=[@pDolares,@pSoles]" ui-jq="sparkline" ui-options="[@pDolares,@pSoles], {type:'pie', height:60,  tooltipFormat: '{{offset:offset}} ({{percent.1}}%)', tooltipValueLookups: {'offset': {0:'Dólares',1:'Soles'}}, sliceColors:['#1a9c39','#fad733']}" class="sparkline inline"></div>
                                 </div>
                                 <div class="col dk padder-v r-r">
-                                    <div class="text-primary-dk font-thin h1"><span>S/. @ViewBag.TotalConsolidado.ToString("N2", CultureInfo.InvariantCulture)</span></div>
+                                    <div id="total_consolidado" class="text-primary-dk font-thin h1"><span>S/. @ViewBag.TotalConsolidado.ToString("N2", CultureInfo.InvariantCulture)</span></div>
                                     <span class="text-muted text-xs">CONSOLIDADO</span>
                                 </div>
-                                <div class="col w-xs v-middle hidden-md bg-success dker">
+                                <div id="pie_consolidado" class="col w-xs v-middle hidden-md bg-success dker">
                                     <a href="#"><i class="fa fa-money fa-3x"></i></a>
                                 </div>
                             </div>
