--- a/NubeBooks/Views/Admin/Libro.cshtml
+++ b/NubeBooks/Views/Admin/Libro.cshtml
@@ -239,8 +239,8 @@ else { cadena = "Actualizar"; }
                             <th class="text-center">Monto</th>
                             <th class="text-center">Partida<br>Presupuesto&nbsp;</th>
                             <th class="text-center">Entidad</th>
-                            <th class="text-center">Docum.&nbsp;</th>
-                            <th class="text-center">E</th>
+                            <th class="text-center">Documento</th>
+                            <th class="text-center">Estado</th>
                             <th style="width:8%"></th>
                         </tr>
                     </thead>
