--- a/NubeBooks/Views/Admin/ReportesGestion.cshtml
+++ b/NubeBooks/Views/Admin/ReportesGestion.cshtml
@@ -84,41 +84,19 @@
                     <div class="col-md-4">
                         <label class="col-md-6 text-center">Ingresos y Egresos por Áreas </label>
                         <div class="col-md-6 text-center">
-                            <a class="btn btn-sm btn-success reporte" data-idreporte="3">Generar Reporte</a>
+                            <a class="btn btn-sm btn-info reporte" data-idreporte="3">Generar Reporte</a>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <label class="col-md-6 text-center">Ingresos por Áreas - Clientes</label>
+                        <label class="col-md-6 text-center">Ventas por Áreas - Clientes</label>
                         <div class="col-md-6 text-center">
-                            <a class="btn btn-sm btn-success reporte" data-idreporte="2">Generar Reporte</a>
+                            <a class="btn btn-sm btn-info reporte" data-idreporte="2">Generar Reporte</a>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <label class="col-md-6 text-center">Egresos por Áreas - Proveedores</label>
+                        <label class="col-md-6 text-center">Gastos por Áreas - Proveedores</label>
                         <div class="col-md-6 text-center">
-                            <a class="btn btn-sm btn-success reporte" data-idreporte="10">Generar Reporte</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="row">
-                    <div class="col-md-4">
-                        <label class="col-md-6 text-center">Ingresos por clientes</label>
-                        <div class="col-md-6 text-center">
-                            <a class="btn btn-sm btn-success reporte" data-idreporte="4">Generar Reporte</a>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <label class="col-md-6 text-center">Gastos por proveedores</label>
-                        <div class="col-md-6 text-center">
-                            <a class="btn btn-sm btn-success reporte" data-idreporte="5">Generar Reporte</a>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <label class="col-md-6 text-center">Ingresos por consultores</label>
-                        <div class="col-md-6 text-center">
-                            <a class="btn btn-sm btn-success reporte" data-idreporte="6">Generar Reporte</a>
+                            <a class="btn btn-sm btn-info reporte" data-idreporte="10">Generar Reporte</a>
                         </div>
                     </div>
                 </div>
@@ -126,31 +104,64 @@
             <div class="form-group">
                 <div class="row">
                     <div class="col-md-4">
-                        <label class="col-md-6 text-center">Facturación por Modalidad de Pago</label>
+                        <label class="col-md-6 text-center">Ventas por Clientes</label>
                         <div class="col-md-6 text-center">
-                            <a class="btn btn-sm btn-success reporte" data-idreporte="11">Generar Reporte</a>
+                            <a class="btn btn-sm btn-info reporte" data-idreporte="4">Generar Reporte</a>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <label class="col-md-6 text-center">Gastos por Proveedores</label>
+                        <div class="col-md-6 text-center">
+                            <a class="btn btn-sm btn-info reporte" data-idreporte="5">Generar Reporte</a>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <label class="col-md-6 text-center">Ventas por Consultores</label>
+                        <div class="col-md-6 text-center">
+                            <a class="btn btn-sm btn-info reporte" data-idreporte="6">Generar Reporte</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="row">
+                    <div class="col-md-4">
+                        <label class="col-md-6 text-center">Ventas por Modalidad de Pago</label>
+                        <div class="col-md-6 text-center">
+                            <a class="btn btn-sm btn-info reporte" data-idreporte="11">Generar Reporte</a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <label class="col-md-6 text-center">Status de Pago de Doc. de Ingresos</label>
                         <div class="col-md-6 text-center">
-                            <a class="btn btn-sm btn-success reporte" data-idreporte="7">Generar Reporte</a>
+                            <a class="btn btn-sm btn-info reporte" data-idreporte="7">Generar Reporte</a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <label class="col-md-6 text-center">Status de Pago de Doc. de Egresos</label>
                         <div class="col-md-6 text-center">
-                            <a class="btn btn-sm btn-success reporte" data-idreporte="8">Generar Reporte</a>
+                            <a class="btn btn-sm btn-info reporte" data-idreporte="8">Generar Reporte</a>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="panel panel-default">
+        <div class="panel-header"><br /></div>
+        <div class="panel-body">
             <div class="form-group">
                 <div class="row">
-                    <div class="col-md-4">
-                        <label class="col-md-6 text-center">Facturación Mensual</label>
+                    <div class="col-md-6">
+                        <label class="col-md-6 text-center">Ventas por Mes</label>
                         <div class="col-md-6 text-center">
-                            <a class="btn btn-sm btn-success reporte" data-idreporte="12">Generar Reporte</a>
+                            <a class="btn btn-sm btn-primary reporte" data-idreporte="12">Generar Reporte</a>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <label class="col-md-6 text-center">Ventas-Gastos por Mes</label>
+                        <div class="col-md-6 text-center">
+                            <a class="btn btn-sm btn-primary reporte" data-idreporte="12">Generar Reporte</a>
                         </div>
                     </div>
                 </div>
